--- a/About.html
+++ b/About.html
@@ -30,14 +30,14 @@
     <title>About Recipe Sharing</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: Arial, san-sarief;
             margin: 20px;
         }
         h1 {
-            color: #333;
+            color: white;
         }
         p {
-            color: #666;
+            color: white;
         }
     </style>
 </head>
